[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["eth"]

[project]
name = "pyeth"
version = "1.1.0"
authors = [
  { name="Mohanson", email="mohanson@outlook.com" },
]
description = "Python SDK for ETH"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["pycryptodome", "requests"]

[project.urls]
homepage = "https://github.com/mohanson/pyeth"
