[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pleth"
version = "1.2.0"
authors = [
  { name="Mohanson", email="mohanson@outlook.com" },
]
description = "Pleth: Ethereum Library For Humans"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["pycryptodome", "requests"]

[project.urls]
homepage = "https://github.com/mohanson/pleth"
